fixed contrast ration problems

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: #36180C;
 }
 
 .d-bloc .a-btn:hover,
@@ -779,7 +779,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #99380B;
     color: #FFFFFF!important;
 }
 
@@ -1051,4 +1051,7 @@ h4 {
 }
 .social {
     margin-top: 10px;
+}
+.brown {
+    color: #3C1506!important;
 }
